# FirstOrchard

./: .pre-commit-config.yaml  FirstOrchard.ipynb  README.md  __init__.py  pyproject.toml  tree.txt
.ipynb_checkpoints/: FirstOrchard-checkpoint.ipynb
first_orchard_solver/: FirstOrchard.ipynb  __init__.py
first_orchard_solver/gameplay/: __init__.py  assets.py  context.py  eventhandler.py  gamelogic.py  gameplay.py  gameplay_text.py  gamesims.py  gamesolver.py  gamestrategy.py  main.py  rend_dynamic.py  rend_static.py
first_orchard_solver/notebooks/: montecarlo.ipynb
first_orchard_solver/tests/: __init__.py  test_game_solver.py  test_gamelogic.py
