[tool.poetry]
name = "first-orchard-solver"
version = "0.1.0"
description = "A solver for the kids' game 'First Orchard' by HABA."
authors = []

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.12.2"
mypy = "^1.16.1"
pytest = "^8.4.1"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
extend-select = ["E", "F", "I"]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = false
warn_return_any = true
explicit_package_bases = true
