[tool.poetry]
name = "first-orchard-solver"
version = "0.1.0"
description = "A solver for the kids' game 'First Orchard' by HABA."
authors = []

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.3.2"
pygame = "^2.6.1"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.12.7"
mypy = "^1.16.1"
pytest = "^8.4.1"
pytest-check = "^2.5.3"
pre-commit = "^4.2.0"
pytest-mypy-plugins = "^3.2.0"
numpy = "^2.3.2"
pytest-builtin-types = "^1.2"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
target-version = "py311"
extend-select = ["D","E", "F", "I"]
ignore = ["I001", "I002", "D203", "D212"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = false
warn_return_any = true
explicit_package_bases = true
strict = true  # applies to everything unless overridden

[[tool.mypy.overrides]]
module = "first_orchard_solver.tests.*"
strict = false 
check_untyped_defs = true
disallow_untyped_defs = false
ignore_missing_imports = true
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = ["pytest.*","pytest_check.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pytest.*","pytest_check.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pytest.*","pytest_check.*"]
ignore_missing_imports = true

[tool.isort]
profile = "black"
line_length = 88

[[tool.mypy.overrides]]
module = ["pytest.*","pytest_check.*"]
ignore_missing_imports = true